[package]
name = "pddlp"
version = "0.1.3"
edition = "2021"
authors = ["Jan M. D. Hansen"]
license-file = "LICENSE"
repository = "https://github.com/jamadaha/pddlp"
description = "A PDDL Parser"

[dependencies]
logos = "0.14.0"

[dev-dependencies]
rstest = "0.18.2"
criterion = "0.5.1"

[[bench]]
name = "bench_main"
harness = false
