[package]
name = "pddlp"
version = "0.1.7"
edition = "2021"
authors = ["Jan M. D. Hansen"]
license-file = "LICENSE"
repository = "https://github.com/jamadaha/pddlp"
description = "A PDDL Parser"

[dependencies]
logos = { features = ["export_derive"], default-features = false, version = "0.14.0" }

[dev-dependencies]
rstest = "0.19.0"
criterion = "0.5.1"

[[bench]]
name = "bench_main"
harness = false
